fixed bug of slider stretching at high container height #10

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-.slider {
+.pooshka-slider {
   &__stripe {
     position: relative;
     width: 100%;
